test/e2e/metaprotocol/testdata/metarouter-attribute-prefix.yaml
---
apiVersion: metaprotocol.aeraki.io/v1alpha1
kind: MetaRouter
metadata:
  name: test-metaprotocol-route
spec:
  hosts:
    - org.apache.dubbo.samples.basic.api.demoservice
  routes:
    - name: v1
      match:
        attributes:
          method:
            prefix: sayHello01
      route:
        - destination:
            host: org.apache.dubbo.samples.basic.api.demoservice
            subset: v1
    - name: v2
      match:
        attributes:
          method:
            prefix: say
      route:
        - destination:
            host: org.apache.dubbo.samples.basic.api.demoservice
            subset: v2
