test/e2e/metaprotocol/testdata/metarouter-local-ratelimit.yaml
# Copyright Aeraki Authors <cncf-aerakimesh-maintainers@lists.cncf.io>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: metaprotocol.aeraki.io/v1alpha1
kind: MetaRouter
metadata:
  name: test-metaprotocol-route
spec:
  hosts:
  - org.apache.dubbo.samples.basic.api.demoservice
  routes:
  - name: default
    match:
      attributes:
        method:
          exact: sayHello
    route:
    - destination:
        host: org.apache.dubbo.samples.basic.api.demoservice
        subset: v1
  localRateLimit:
    tokenBucket:
      fillInterval: 60s
      maxTokens: 5
      tokensPerFill: 5
    conditions:
    - tokenBucket:
        fillInterval: 60s
        maxTokens: 2
        tokensPerFill: 2
      match:
        attributes:
          method:
            exact: sayHello
